# public-tools

./: .dockerignore  .prettierignore  AGENTS.md  CLAUDE.md  Makefile  README.md  mise.toml  package.json  pnpm-lock.yaml  pyrightconfig.json
apps/api/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
apps/api/scripts/: export_openapi.py
apps/api/src/app/: __init__.py  main.py
apps/api/src/app/auth/: __init__.py  jwt.py
apps/api/src/app/clients/: __init__.py  auth_api.py
apps/api/src/app/core/: __init__.py  settings.py
apps/api/src/app/dependencies/: __init__.py  auth.py
apps/api/src/app/routers/: __init__.py  auth.py  browser_info.py  download_speed.py  summarize.py
apps/api/src/app/schemas/: __init__.py  auth.py  auth_api_generated.py  browser_info.py  download_speed.py  summarize.py
apps/api/src/app/services/: __init__.py  auth.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/api/: __init__.py  test_auth.py  test_download_speed.py  test_summarize.py
apps/api/tests/unit/: __init__.py  test_auth_service.py  test_jwt.py
apps/web/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.e2e.json  vite.config.ts
docs/: README.md  tools-design.md
docs/api/: api.md  architecture.md  coding-standards.md  openapi.json  testing.md
docs/auth/: README.md  api-reference.md  openapi.json  sso-guide.md
docs/web/: architecture.md  coding-standards.md  (+3 more)
mockups/: README.md  auth-callback.html  browser-info.html  download-speed.html  login.html  summarize.html  tool-list.html
(+44 files in other folders)
