[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "google-genai>=2.0.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.27.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

# Pylance / Pyright: `app` は src 配下にあるため解決パスを明示する
[tool.pyright]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
